# RI-OM

./: CMakeLists.txt  README.md  package.xml
RI-OM/launch/: run.launch  setting.rviz
RI-OM/lib/: closeloop_detection.cpp  common.cpp  scan_to_map.h
RI-OM/msg/: key_info.msg
RI-OM/src/: fast_odom.cpp
config/: params.yaml
launch/: run.launch
lib/: closeloop_detection.h  common.h  kalman.hpp  ndt_map.cpp  ndt_map.h  ros_msg_help.cpp  ros_msg_help.h  scan_to_map.cpp
lib/scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h
src/: mapping.cpp  transform_fusion.cpp  utility.hpp
